<?xml version="1.0"?>
<package>
  <name>uwsim_osgworks</name>
  <version>2.0.1</version>
  <description>The OSG Works library adapted to UWSim. See https://code.google.com/p/osgworks</description>

  <maintainer email="mprats@willowgarage.com">Mario Prats</maintainer>
  <license>LGPL</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>libopenscenegraph</build_depend>
  
  <run_depend>catkin</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>libopenscenegraph</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
